# jack-meterbridge

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.in  debian_notes.md
doc/: PPM_IEC_268-18_Digital.xcf  iec_scale.ods
graphics/: Makefile  Makefile.am  Makefile.in
jupyter/: lowpass02.ipynb  requirements.txt  simul_01.ipynb  simul_02.ipynb
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  dpm_meters.c  dpm_meters.h  dpm_meters0.c  envelopes.c  envelopes.h  find_image.c  find_image.h  jf_meters.c  jf_meters.h  linedraw.c  linedraw.h  main.c  main.h  ppm_meters.c  ppm_meters.h  scope.c  scope.h  vu_meters.c  vu_meters.h
