# Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(meterbridge, 0.9.2)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_self], , [AC_MSG_ERROR(You need libpthread installed)])
AC_CHECK_LIB([m], [sqrt], , [AC_MSG_ERROR(Can't find libm)])

# Checks for packages.
AM_PATH_SDL(1.2.0, , AC_MSG_ERROR([Requires SDL 1.2 or later]))
PKG_CHECK_MODULES(JACK,jack)
AC_SUBST(JACK_CFLAGS)
AC_SUBST(JACK_LIBS)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([atexit])

AC_OUTPUT([Makefile graphics/Makefile src/Makefile])
